--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url(./assets/6bb791d68bb84aef9cd0e46d32538833-700.jpg);
+    background-size: cover;
+}
