--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,13 +4,13 @@
 <div class="container w-25 p-3 mt-5" style="background: rgb(0,0,0,0.5);">
     <h1 class="text-center text-white">Login Page</h1>
     <div class="p-2 mt-2">
-        <input id="acid" type="text" [placeholder]="acnt" (change)="acnoChange($event)" class="form-control">
+        <input id="acid" type="text" [placeholder]="acnt" #acno (change)="acnoChange($event)" class="form-control">
     </div>
     <div class="p-2 mt-2">
-        <input id="pid" type="password" placeholder="Password" (change)="pswChange($event)" class="form-control">
+        <input id="pid" type="password" placeholder="Password" #psw  class="form-control">
     </div>
     <div class="p-2 mt-2 text-center"> 
-        <button class="btn btn-success" type="button" (click)="login()">login</button>
+        <button class="btn btn-success" type="button" (click)="login(acno,psw)">login</button>
         <p class="text-white p-4">new user? <a href="" style="text-decoration:none ;" class="text-info">Register</a></p>
     </div>
 </div>
